[workspace]
members = ["crates/*"]
# TODO: Update to 3 when targeting 1.84+ (probably 1.85 with new edition)
resolver = "2"

[workspace.package]
edition = "2021"
# NOTE: See /rust-toolchain.toml when updating.
rust-version = "1.82"
license = "AGPL-3.0-or-later"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
anyhow = "1.0.55"
futures = "0.3.25"
ironworks = { git = "https://github.com/ackwell/ironworks.git" }
ironworks_schema = { git = "https://github.com/ackwell/ironworks.git" }
serde = "1.0.137"
thiserror = "2.0.3"
tokio = "1.32.0"
tokio-util = "0.7.4"
tracing = "0.1.34"
