[workspace]
members = ["crates/*"]
# TODO: Update to 3 when targeting 1.84+ (probably 1.85 with new edition)
resolver = "2"

[workspace.package]
edition = "2021"
# NOTE: See /rust-toolchain.toml when updating.
rust-version = "1.82"
license = "AGPL-3.0-or-later"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.55"
bb8 = "0.9.0"
either = "1.8.0"
figment = "0.10.8"
fs4 = "0.12"
futures = { version = "0.3.25", default-features = false }
graphql_client = "0.14.0"
image = { version = "0.25.1", default-features = false }
image_dds = { version = "0.7.0", default-features = false }
ironworks = { git = "https://github.com/ackwell/ironworks.git" }
ironworks_schema = { git = "https://github.com/ackwell/ironworks.git" }
itertools = "0.14.0"
mini-moka = "0.10.0"
nonempty = "0.11.0"
reqwest = "0.12.3"
rusqlite = "0.32.1"
sea-query = { version = "0.32", default-features = false }
sea-query-rusqlite = "0.7.0"
seahash = "4.1.0"
serde = "1.0.137"
serde_json = "1.0.95"
strum = "0.26.2"
thiserror = "2.0.3"
tokio = "1.32.0"
tokio-util = "0.7.4"
tracing = "0.1.34"
uuid = "1.3.2"
