[workspace]
members = ["crates/*"]
# TODO: Update to 3 when targeting 1.84+ (probably 1.85 with new edition)
resolver = "2"

[workspace.package]
edition = "2021"
# NOTE: See /rust-toolchain.toml when updating.
rust-version = "1.85"
license = "AGPL-3.0-or-later"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
aho-corasick = "1.1.3"
aide = "0.14.0"
anyhow = "1.0.55"
axum = "0.8.1"
axum-extra = "0.10.0"
bb8 = "0.9.0"
# Needs to be updated to axum^0.8
# console-subscriber = "0.4.1"
either = "1.8.0"
figment = "0.10.8"
fs4 = "0.12"
futures = { version = "0.3.25", default-features = false }
git-version = "0.3.9"
graphql_client = "0.14.0"
image = { version = "0.25.1", default-features = false }
image_dds = { version = "0.7.0", default-features = false }
# ironworks = { git = "https://github.com/ackwell/ironworks.git" }
ironworks = { path = "../ironworks/ironworks" }
# ironworks_schema = { git = "https://github.com/ackwell/ironworks.git" }
ironworks_schema = { path = "../ironworks/schema" }
itertools = "0.14.0"
maud = "0.27.0"
mime = "0.3.17"
mini-moka = "0.10.0"
nom = "8.0.0"
nonempty = "0.11.0"
regex = "1.10.5"
reqwest = "0.12.3"
rusqlite = "0.32.1"
schemars = "0.8.21"
sea-query = { version = "0.32", default-features = false }
sea-query-rusqlite = "0.7.0"
seahash = "4.1.0"
serde = "1.0.137"
serde_json = "1.0.95"
strum = "0.26.2"
thiserror = "2.0.3"
tokio = "1.32.0"
tokio-util = "0.7.4"
tower-http = "0.6.2"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
uuid = "1.3.2"
