[package]
name = "bm_asset"
description = "Asset composition & conversion for boilmaster"
version = "0.0.0"
publish = false

edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bm_data = { path = "../bm_data" }
bm_version = { path = "../bm_version" }

anyhow.workspace = true
image.workspace = true
image_dds.workspace = true
ironworks.workspace = true
itertools.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
