[package]
name = "bm_data"
description = "Versioned data access for boilmaster"
version = "0.0.0"
publish = false

edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bm_version = { path = "../bm_version" }

anyhow.workspace = true
ironworks = { workspace = true, features = ["excel", "sqpack", "zipatch"] }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
