[package]
name = "bm_read"
description = "Excel reading for boilmaster"
version = "0.0.0"
publish = false

edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
either = "1.8.0"

anyhow.workspace = true
ironworks.workspace = true
ironworks_schema.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
