[package]
name = "bm_search"
description = "Excel search service for boilmaster"
version = "0.0.0"
publish = false

edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bm_data = { path = "../bm_data" }
bm_read = { path = "../bm_read" }
bm_schema = { path = "../bm_schema" }
bm_version = { path = "../bm_version" }

aho-corasick = "1.1.3"
bb8 = "0.9.0"
mini-moka = "0.10.0"
rusqlite = "0.32.1"
sea-query = { version = "0.32", default-features = false }
sea-query-rusqlite = "0.7.0"
uuid = "1.3.2"

anyhow.workspace = true
either.workspace = true
figment.workspace = true
futures.workspace = true
ironworks.workspace = true
ironworks_schema.workspace = true
itertools.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
