[package]
name = "bm_version"
description = "Version and patch file management for boilmaster."
version = "0.0.0"
publish = false

edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
figment = "0.10.8"
fs4 = "0.12"
futures = "0.3.25"
graphql_client = "0.14.0"
nonempty = "0.11.0"
reqwest = "0.12.3"
seahash = "4.1.0"
serde = "1.0.137"
serde_json = "1.0.95"

anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
