[package]
name = "bm_version"
description = "Version and patch file management for boilmaster."
version = "0.0.0"
publish = false

edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
figment.workspace = true
fs4.workspace = true
futures.workspace = true
graphql_client.workspace = true
nonempty.workspace = true
reqwest.workspace = true
seahash.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
