[package]
name = "boilmaster"
description = "Web service for Final Fantasy XIV game data and asset discovery"
version = "0.0.0"
publish = false

edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bm_version = { path = "../bm_version" }

aho-corasick = "1.1.3"
aide = { version = "0.13.4", features = ["axum", "axum-headers", "macros"] }
anyhow = "1.0.55"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bb8 = "0.9.0"
console-subscriber = "0.4.1"
derivative = "2.2.0"
either = "1.8.0"
figment = { version = "0.10.8", features = ["env", "toml"] }
fs4 = { version = "0.12", features = ["sync"] }
futures = "0.3.25"
git-version = "0.3.9"
graphql_client = { version = "0.14.0" }
image = { version = "0.25.1", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
image_dds = { version = "0.7.0", default-features = false, features = [
    "image",
] }
ironworks = { git = "https://github.com/ackwell/ironworks.git", features = [
    "excel",
    "sqpack",
    "tex",
    "zipatch",
] }
ironworks_schema = { git = "https://github.com/ackwell/ironworks.git", features = [
    "exdschema",
] }
itertools = "0.14.0"
maud = { version = "0.26.0", features = ["axum"] }
mime = "0.3.17"
mini-moka = "0.10.0"
nonempty = { version = "0.11.0", features = ["serialize"] }
nom = "7.1.1"
regex = "1.10.5"
reqwest = { version = "0.12.3", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled", "vtab"] }
schemars = { version = "0.8.21", features = ["preserve_order", "uuid1"] }
sea-query = { version = "0.32", default-features = false, features = [
    "backend-sqlite",
    "derive",
    "thread-safe",
] }
sea-query-rusqlite = { version = "0.7.0" }
seahash = "4.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.95"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tokio-util = "0.7.4"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["json"] }
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
