[package]
name = "boilmaster"
description = "Web service for Final Fantasy XIV game data and asset discovery"
version = "0.0.0"
publish = false

edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bm_asset = { path = "../bm_asset" }
bm_data = { path = "../bm_data" }
bm_read = { path = "../bm_read" }
bm_search = { path = "../bm_search" }
bm_schema = { path = "../bm_schema" }
bm_version = { path = "../bm_version" }

aho-corasick.workspace = true
anyhow.workspace = true
aide = { workspace = true, features = ["axum", "macros"] }
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["typed-header"] }
console-subscriber.workspace = true
either.workspace = true
figment = { workspace = true, features = ["env", "toml"] }
futures.workspace = true
git-version.workspace = true
ironworks = { workspace = true, features = ["excel"] }
ironworks_schema.workspace = true
maud = { workspace = true, features = ["axum"] }
mime.workspace = true
nom.workspace = true
regex.workspace = true
schemars = { workspace = true, features = ["preserve_order", "uuid1"] }
seahash.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tokio-util.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
